--- a/src/app/shared/cranix-md-list/cranix-md-list.component.scss
+++ b/src/app/shared/cranix-md-list/cranix-md-list.component.scss
@@ -1,25 +1,36 @@
-ion-item{
+ion-item {
     max-height: 60px;
     --padding-start: 2px;
-  }
+}
 
-  ion-label {
-      margin-top: 2px;
-      margin-bottom: 2px;
-  }
+ion-label {
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
 
-  ion-note {
-      margin-left: 2px;
-      margin-right: 2px;
-  }
-  ion-checkbox {
+ion-note {
     margin-left: 2px;
     margin-right: 2px;
+}
+
+ion-checkbox {
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
+p {
+    font-size: min(1rem, 10px);
+    margin-top: 1px;
+    margin-bottom: 1px;
+    margin-left: 1px;
+    margin-right: 1px;
+    line-height: min(1rem, 12px);
 }
 
 .odd {
     background-color: lightgray;
 }
+
 .pair {
     background-color: darkgray;
 }
