--- a/src/app/protected/cranix/security/room-access/add-edit-room-access/add-edit-room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/add-edit-room-access/add-edit-room-access.component.html
@@ -1,9 +1,9 @@
-<form #addEditRoomAccess="ngForm" (ngSubmit)="onSubmit(addEditRoomAccess.value)">
+<form #addEditRoomAccess="ngForm" (ngSubmit)="onSubmit()">
   <ion-header translucent>
     <ion-toolbar>
-      <ion-title>{{  objectActionTitle | translate }}</ion-title>
+      <ion-title>{{ objectActionTitle | translate }}</ion-title>
       <ion-buttons slot="end">
-        <ion-button type="submit" class="ion-no-margin" [disabled]="!addEditRoomAccess.valid">
+        <ion-button type="submit" class="ion-no-margin" [disabled]="!addEditRoomAccess.valid && !roomAccess.roomId">
           <ion-icon slot="icon-only" color="success" name="checkmark-sharp"></ion-icon>
         </ion-button>
         <ion-button *ngIf="objectAction == 'modify'" fill="clear" size="small" (click)="deleteObject()">
@@ -17,49 +17,60 @@
   </ion-header>
   <ion-content fullscreen>
     <ion-list lines="full" class="ion-no-margin ion-no-padding">
-      <div *ngFor=" let key of objectKeys">
-        <ion-item *ngIf="key == 'roomId'">
-          <ion-label position="stacked">{{'roomId'| translate}}</ion-label>
-          <ion-select type="text" [(ngModel)]="roomAccess.roomId" name="roomId" required
-            [compareWith]="objectService.compareFn">
-            <ion-select-option *ngFor="let id of objectService.selects['roomId']" value="{{id}}">
-              {{id | idToName:'room'}}
-            </ion-select-option>
-          </ion-select>
-        </ion-item>
-        <ion-item *ngIf="key == 'accessType'">
-          <ion-label position="stacked">{{'accessType'| translate}}</ion-label>
-          <ion-select type="text" [(ngModel)]="roomAccess.accessType" name="accessType" required [compareWith]="objectService.compareFn">
-            <ion-select-option *ngFor="let accessType of objectService.selects['accessType']" value="{{accessType}}">
-              {{accessType | translate}}
-            </ion-select-option>
-          </ion-select>
-        </ion-item>
-        <ion-item *ngIf="key == 'action'">
-          <ion-label position="stacked">{{'action'| translate}}</ion-label>
-          <ion-select type="text" [(ngModel)]="roomAccess.action" name="action" required [compareWith]="objectService.compareFn" [disabled]="roomAccess.accessType != 'ACT'">
-            <ion-select-option *ngFor="let action of objectService.selects['action']" value="{{action}}">
-              {{action | translate}}
-            </ion-select-option>
-          </ion-select>
-        </ion-item>
-        <ion-item *ngIf="key == 'pointInTime'">
-          <ion-label position="stacked">{{ key | translate }}</ion-label>
-          <ion-input type="text" [(ngModel)]="roomAccess.pointInTime" name="pointInTime" [disabled]="roomAccess.accessType == 'DEF'"></ion-input>
-        </ion-item>
-        <ion-item *ngIf="key == 'login' || key == 'portal' || key == 'printing' || key == 'proxy' || key == 'direct'"
+      @for(key of objectKeys; track key) {
+      <ion-item>
+        @if(key == 'roomId'){
+        <ion-label position="stacked">{{'roomId'| translate}}</ion-label>
+        <ionic-selectable #ionicSelectable (onChange)="roomChanged($event.value)" [items]="roomsToSelect"
+          itemValueField="id" itemTextField="name" [canSearch]="true">
+          <ng-template ionicSelectableHeaderTemplate>
+            <ion-toolbar>
+              <ion-title>
+                {{ "Select a Room" | translate }}
+              </ion-title>
+              <ion-buttons slot="end">
+                <ion-button ion-button (click)="ionicSelectable.close()">
+                  <ion-icon color="danger" name="close"></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ng-template>
+          <ng-template ionicSelectableItemIconTemplate>
+            <div></div>
+          </ng-template>
+        </ionic-selectable>
+        } @else if(key == 'accessType') {
+        <ion-label position="stacked">{{'accessType'| translate}}</ion-label>
+        <ion-select type="text" [(ngModel)]="roomAccess.accessType" name="accessType" required
+          [compareWith]="objectService.compareFn">
+          <ion-select-option *ngFor="let accessType of objectService.selects['accessType']" value="{{accessType}}">
+            {{accessType | translate}}
+          </ion-select-option>
+        </ion-select>
+        } @else if(key == 'action') {
+        <ion-label position="stacked">{{'action'| translate}}</ion-label>
+        <ion-select type="text" [(ngModel)]="roomAccess.action" name="action" required
+          [compareWith]="objectService.compareFn" [disabled]="roomAccess.accessType != 'ACT'">
+          <ion-select-option *ngFor="let action of objectService.selects['action']" value="{{action}}">
+            {{action | translate}}
+          </ion-select-option>
+        </ion-select>
+        } @else if(key == 'pointInTime') {
+        <ion-label position="stacked">{{ key | translate }}</ion-label>
+        <ion-input type="text" [(ngModel)]="roomAccess.pointInTime" name="pointInTime"
+          [disabled]="roomAccess.accessType == 'DEF'"></ion-input>
+        } @else if(key == 'login' || key == 'portal' || key == 'printing' || key == 'proxy' || key == 'direct') {
+        <ion-label position="stacked">{{ key | translate }}</ion-label>
+        <ion-checkbox slot="end" [(ngModel)]="roomAccess[key]" name="{{key}}" color="secondary"
           [disabled]="roomAccess.accessType == 'ACT'">
-          <ion-label position="stacked">{{ key | translate }}</ion-label>
-          <ion-checkbox slot="end" [(ngModel)]="roomAccess[key]" name="{{key}}" color="secondary" checked>
-          </ion-checkbox>
-        </ion-item>
-        <ion-item
-          *ngIf="key == 'monday' || key == 'tuesday' || key == 'wednesday' || key == 'thursday' || key == 'friday' || key == 'saturday' || key == 'sunday' || key == 'holiday'"
-          [disabled]="roomAccess.accessType == 'DEF'">
-          <ion-label position="stacked">{{ key | translate }}</ion-label>
-          <ion-checkbox slot="end" [(ngModel)]="roomAccess[key]" name="{{key}}" color="secondary"></ion-checkbox>
-        </ion-item>
-      </div>
+        </ion-checkbox>
+        } @else {
+        <ion-label position="stacked">{{ key | translate }}</ion-label>
+        <ion-checkbox slot="end" [(ngModel)]="roomAccess[key]" name="{{key}}" color="secondary"
+          [disabled]="roomAccess.accessType == 'DEF'"></ion-checkbox>
+        }
+      </ion-item>
+      }
     </ion-list>
   </ion-content>
 </form>
