--- a/src/app/protected/cranix/security/room-access/room-access.component.scss
+++ b/src/app/protected/cranix/security/room-access/room-access.component.scss
@@ -1,4 +1,4 @@
-.ag-theme-alpine .ag-cell, .ag-theme-alpine .ag-full-width-row .ag-cell-wrapper.ag-row-group {
+/* .ag-theme-alpine .ag-cell, .ag-theme-alpine .ag-full-width-row .ag-cell-wrapper.ag-row-group {
     border: 1px solid transparent;
     line-height: 35px;
     padding-left: 2px;
@@ -8,4 +8,4 @@
 .ag-theme-alpine .ag-header-cell, .ag-theme-alpine .ag-header-group-cell {
     padding-left: 2px;
     padding-right: 2px;
-}
+} */
