Implementing swipe gesture.

--- a/src/app/protected/cranix/calendar/calendar.component.html
+++ b/src/app/protected/cranix/calendar/calendar.component.html
@@ -1,5 +1,5 @@
 <!-- cranix-toolbar title="{{'Calendar' | translate}}"></cranix-toolbar -->
 <cranix-toolbar title="Calendar"></cranix-toolbar>
 <ion-content>
-    <full-calendar [options]="calendarOptions" [events]="events"></full-calendar>
+    <full-calendar #calendar [options]="calendarOptions" [events]="events"></full-calendar>
 </ion-content>
