--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -7,11 +7,11 @@
     <ion-card-content *ngIf="!authService.use2fa">
       <ion-list>
         <ion-item>
-          <ion-input label="{{'username'|translate}}" [(ngModel)]="user.username" name="username" type="text"
+          <ion-input label="{{'username'|translate}}" labelPlacement="fixed" [(ngModel)]="user.username" name="username" type="text"
             autocomplete="off" required></ion-input>
         </ion-item>
         <ion-item>
-          <ion-input label="{{'password'|translate}}" [(ngModel)]="user.password" name="password"
+          <ion-input label="{{'password'|translate}}" labelPlacement="fixed" [(ngModel)]="user.password" name="password"
             [type]="showPassword ? 'text' : 'password'" autocomplete="off" required></ion-input>
           <ion-icon slot="end" [name]="showPassword ? 'eye-off' : 'eye'"
             (click)="showPassword = !showPassword"></ion-icon>
@@ -31,7 +31,7 @@
           </ion-select>
         </ion-item>
         <ion-item>
-          <ion-input label="{{'Enter PIN'|translate}}" [(ngModel)]="totppin" name="totppin" required></ion-input>
+          <ion-input label="{{'Enter PIN'|translate}}" labelPlacement="fixed" [(ngModel)]="totppin" name="totppin" required></ion-input>
           <ion-button *ngIf="!authService.crx2fa.startsWith('TOTP')" (click)="sendPin()">
             {{'Send pin'|translate}}
           </ion-button>
